# as64_ws

./: .gitignore  README.md  dmp_results.mat  replace_text.sh  replace_text_c.sh
c++/as64_ws/src/DMP_Kuka_test/: CMakeLists.txt  package.xml
c++/as64_ws/src/DMP_Kuka_test/config/: config.yml
c++/as64_ws/src/DMP_Kuka_test/include/: DMP_Kuka_controller.h  DMP_Kuka_controller2.h  cmd_args.h  log_data.h  utils.h
c++/as64_ws/src/DMP_Kuka_test/launch/: DMP_Kuka_test.launch
c++/as64_ws/src/DMP_Kuka_test/src/: main.cpp
c++/as64_ws/src/DMP_Kuka_test/src/source_list/: DMP_CartPos_orient_test2.cpp  DMP_CartPos_test.cpp  DMP_Kuka_controller.cpp  DMP_Kuka_controller2.cpp  cmd_args.cpp  log_data.cpp  utils.cpp
c++/as64_ws/src/DMP_UR10_test/: CMakeLists.txt  package.xml
c++/as64_ws/src/DMP_UR10_test/include/: DMP_UR10_controller.h  log_data.h  utils.h
c++/as64_ws/src/DMP_UR10_test/src/: main.cpp
c++/as64_ws/src/DMP_UR10_test/src/source_list/: DMP_UR10_controller.cpp
c++/as64_ws/src/DMP_lib/: CMakeLists.txt  package.xml
c++/as64_ws/src/DMP_lib/include/DMP_lib/CanonicalSystem/: CanonicalSystem.h  ExpCanonicalSystem.h  (+2 more)
c++/as64_ws/src/DMP_lib/src/CanonicalSystem/: CanonicalSystem.cpp  ExpCanonicalSystem.cpp  LinCanonicalSystem.cpp  SpringDamperCanonicalSystem.cpp
c++/as64_ws/src/DMP_lib/src/DMP/: .DMP.cpp.kate-swp  .DMPBio.cpp.kate-swp  DMP.cpp  DMPBase.cpp  DMPBio.cpp  DMP_.cpp  DMP_plus.cpp
c++/as64_ws/src/as64_utils/: CMakeLists.txt  package.xml
c++/as64_ws/src/as64_utils/src/filter/: movingWinMeanFilter.cpp
c++/as64_ws/src/as64_utils/src/math/: convertions.cpp  math.cpp  quaternions.cpp
c++/as64_ws/src/as64_utils/src/misc/: timer.cpp
c++/as64_ws/src/handover/: CMakeLists.txt  CMakeLists2.txt  package.xml  package2.xml
c++/as64_ws/src/handover/config/: DS_GMR_params.txt  T_endEffector_obj.txt  T_robot_cam.txt  config.yml  init_pose.txt  target_pose.txt
c++/as64_ws/src/handover/include/: arm_handover_controller.h  hand_handover_controller.h  handover_controller.h  jlav_module.h  svf_module.h  utils.h
c++/as64_ws/src/handover/launch/: handover.launch  test_DS_motion.launch
c++/as64_ws/src/handover/src/: bad.cpp  bad_stop.cpp  bhand_test_grasp.cpp  handover_controller.cpp  main.cpp  test_DS_motion.cpp
c++/as64_ws/src/handover/src/source_list/: arm_handover_controller.cpp  hand_handover_controller.cpp  jlav_module.cpp  svf_module.cpp  utils.cpp
c++/as64_ws/src/lib/DMP_lib/: CMakeLists.txt  package.xml
c++/as64_ws/src/lib/DMP_lib/src/: DMP_utils.cpp
c++/as64_ws/src/lib/filter_lib/: CMakeLists.txt  package.xml
c++/as64_ws/src/lib/filter_lib/src/: filter.cpp  movingWinMeanFilter.cpp  svf.cpp
c++/as64_ws/src/lib/math_lib/: CMakeLists.txt
c++/as64_ws/src/lib/math_lib/src/: convertions.cpp  dtw.cpp  math.cpp  quaternions.cpp
c++/as64_ws/src/lib/robotics_lib/: CMakeLists.txt  package.xml
c++/as64_ws/src/lib/robotics_lib/src/: jlav.cpp  robotics.cpp
c++/as64_ws/src/lib/signalProcessing_lib/: CMakeLists.txt  package.xml
c++/as64_ws/src/lib/signalProcessing_lib/src/: signalProcessing_lib.cpp
c++/as64_ws/src/lib/time_lib/: CMakeLists.txt
c++/as64_ws/src/lib/time_lib/src/: time.cpp  timer.cpp
c++/as64_ws/src/robot_grav_comp_move/: CMakeLists.txt  README.md  package.xml
c++/as64_ws/src/robot_grav_comp_move/config/: config.yml
c++/as64_ws/src/robot_grav_comp_move/data/: data
c++/as64_ws/src/robot_grav_comp_move/include/: robot_grav_comp_controller.h  utils.h
c++/as64_ws/src/robot_grav_comp_move/launch/: robot_grav_comp_move.launch
c++/as64_ws/src/robot_grav_comp_move/src/: main.cpp  robot_grav_comp_controller.cpp
c++/as64_ws/src/robot_grav_comp_move/src/source_list/: utils.cpp
c++/as64_ws/src/robot_pbd_controller/: CMakeLists.txt  package.xml
c++/as64_ws/src/robot_pbd_controller/config/: Robot_PbD_controller_config.yml
c++/as64_ws/src/robot_pbd_controller/include/: Robot_PbD_controller.h  log_data.h
c++/as64_ws/src/robot_pbd_controller/launch/: ur10_robot_controller.launch
c++/as64_ws/src/robot_pbd_controller/src/: Robot_PbD_controller.cpp
c++/as64_ws/src/test/DMP_test/: CMakeLists.txt  CMakeLists.txt2  package.xml
c++/as64_ws/src/test/DMP_test/config/: config.yml
c++/as64_ws/src/test/DMP_test/include/: cmd_args.h  log_data.h  utils.h
c++/as64_ws/src/test/DMP_test/launch/: DMP_CartPos_orient_test.launch  DMP_CartPos_test.launch  DMP_orient_test.launch  DMP_test.launch
c++/as64_ws/src/test/DMP_test/src/: DMP_CartPos_orient_test.cpp  DMP_CartPos_test.cpp  DMP_canonicalClock_test.cpp  DMP_gatingFunction_test.cpp  DMP_orient_test.cpp  DMP_test.cpp  main.cpp  main2.cpp
c++/as64_ws/src/test/io_test/: CMakeLists.txt
c++/as64_ws/src/test/io_test/launch/: io_test.launch
c++/as64_ws/src/test/io_test/src/: file_io_test.cpp  terminal_colors_test.cpp
c++/as64_ws/src/test/math_test/: CMakeLists.txt  package.xml
c++/as64_ws/src/test/math_test/launch/: math_test.launch
c++/as64_ws/src/test/math_test/src/: math_test.cpp
c++/as64_ws/src/test/param_test/: CMakeLists.txt  package.xml
c++/as64_ws/src/test/param_test/config/: config.par  config.yml
c++/as64_ws/src/test/param_test/launch/: param_test.launch
c++/as64_ws/src/test/param_test/src/: main.cpp
c++/as64_ws/src/test/ur10_test/: CMakeLists.txt  package.xml
c++/as64_ws/src/test/ur10_test/config/: config.yml  run_urscript_config.yml  test_force_mode_config.yml  test_force_mode_with_data_logging_config.yml  test_logging.yml
c++/as64_ws/src/test/ur10_test/data/: logged_data
c++/as64_ws/src/test/ur10_test/include/: cmd_args.h  ur10_robot.h
c++/as64_ws/src/test/ur10_test/launch/: run_urscript.launch  test_force_mode.launch  test_logging.launch  ur10_test.launch
c++/as64_ws/src/test/ur10_test/matlab/: load_logged_data.m  logged_data.mat  plot_logged_data.m
c++/as64_ws/src/test/ur10_test/scripts/: test_force_mode_with_movej.script
c++/as64_ws/src/test/ur10_test/src/: run_urscript.cpp  test_force_mode.cpp  test_force_mode_with_data_logging.cpp  test_logging.cpp  ur10_test.cpp
c++/as64_ws/src/universal_robot/ur10_robot/: CMakeLists.txt
(+518 files in other folders)
