<?xml version="1.0"?>
<package>
  <name>dmp_ur10_test</name>
  <version>0.0.0</version>
  <description>DMP_UR10_test_node</description>

  <maintainer email="antosidi646@gmail.com">Antonis Sidiropoulos</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

  <build_depend>roslib</build_depend>
  <run_depend>roslib</run_depend>

  <build_depend>DMP_lib</build_depend>
  <run_depend>DMP_lib</run_depend>

  <build_depend>param_lib</build_depend>
  <run_depend>param_lib</run_depend>

  <build_depend>math_lib</build_depend>
  <run_depend>math_lib</run_depend>

  <build_depend>plot_lib</build_depend>
  <run_depend>plot_lib</run_depend>

  <build_depend>io_lib</build_depend>
  <run_depend>io_lib</run_depend>

  <build_depend>time_lib</build_depend>
  <run_depend>time_lib</run_depend>

  <build_depend>ur10_robot</build_depend>
  <run_depend>ur10_robot</run_depend>

  <build_depend>signalProcessing_lib</build_depend>
  <run_depend>signalProcessing_lib</run_depend>

  <build_depend>filter_lib</build_depend>
  <run_depend>filter_lib</run_depend>

</package>
