<?xml version="1.0"?>
<package>
  <name>handover</name>
  <version>0.0.0</version>
  <description>handover_node</description>

  <maintainer email="antosidi@auth.gr">user</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>

  <build_depend>DS_lib</build_depend>
  <run_depend>DS_lib</run_depend>

  <build_depend>autharl_core</build_depend>
  <run_depend>autharl_core</run_depend>

  <build_depend>kuka_lwr</build_depend>
  <run_depend>kuka_lwr</run_depend>

  <build_depend>autharl_robot</build_depend>
  <run_depend>autharl_robot</run_depend>

  <build_depend>lwr_robot</build_depend>
  <run_depend>lwr_robot</run_depend>

  <build_depend>bhand_lib</build_depend>
  <run_depend>bhand_lib</run_depend>

  <build_depend>math_lib</build_depend>
  <run_depend>math_lib</run_depend>

  <build_depend>filter_lib</build_depend>
  <run_depend>filter_lib</run_depend>

  <build_depend>time_lib</build_depend>
  <run_depend>time_lib</run_depend>

  <build_depend>robotics_lib</build_depend>
  <run_depend>robotics_lib</run_depend>

</package>
