<?xml version="1.0"?>
<package>
  <name>robot_grav_comp_move</name>
  <version>0.0.0</version>
  <description>Controller allowing to move kuka in gravity compensation and record poses and paths</description>

  <maintainer email="fao@todo.todo">Antonis Sidiropoulos</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>

  <build_depend>autharl_core</build_depend>
  <run_depend>autharl_core</run_depend>

  <build_depend>lwr_robot</build_depend>
  <run_depend>lwr_robot</run_depend>

  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

  <build_depend>io_lib</build_depend>
  <run_depend>io_lib</run_depend>

  <build_depend>time_lib</build_depend>
  <run_depend>time_lib</run_depend>

  <export></export>

</package>
