<?xml version="1.0"?>
<package>
  <name>robot_pbd_controller</name>
  <version>0.0.0</version>
  <description>robot_pbd_controller</description>

  <maintainer email="antosidi646@gmail.com">Antonis Sidiropoulos</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

  <build_depend>roslib</build_depend>
  <run_depend>roslib</run_depend>

  <build_depend>param_lib</build_depend>
  <run_depend>param_lib</run_depend>

  <build_depend>math_lib</build_depend>
  <run_depend>math_lib</run_depend>

  <build_depend>io_lib</build_depend>
  <run_depend>io_lib</run_depend>

  <build_depend>time_lib</build_depend>
  <run_depend>time_lib</run_depend>

</package>
